--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -69,13 +69,13 @@
                 <span id="fill" class="phase-path"></span>
                 <span id="progress" class="phase-path"></span>
 
-                <div class="disabled icon"><img src="/images/layout/stageicons/meet.svg"/><span>meet</span></div>
-                <div class="disabled icon"><img src="/images/layout/stageicons/brainstorm.svg"/><span>brainstorm</span></div>
-                <div class="disabled icon"><img src="/images/layout/stageicons/pitch.svg"/><span>pitch</span></div>
-                <div class="disabled icon"><img src="/images/layout/stageicons/deliberate.svg"/><span>deliberate</span></div>
+                <div class="disabled icon"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/meet.svg"/><span>meet</span></div>
+                <div class="disabled icon"><img src="http://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/brainstorm.svg"/><span>brainstorm</span></div>
+                <div class="disabled icon"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/pitch.svg"/><span>pitch</span></div>
+                <div class="disabled icon"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/deliberate.svg"/><span>deliberate</span></div>
                 {{!-- <div class="disabled icon"><img src="/images/layout/stageicons/grandstand.svg"/><span>grandstand</span></div> --}}
-                <div class="disabled icon"><img src="/images/layout/stageicons/decide.svg"/><span>decide</span></div>
-               <div class="disabled icon"> <img src="/images/layout/stageicons/score.svg"/><span>score</span></div>
+                <div class="disabled icon"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/decide.svg"/><span>decide</span></div>
+               <div class="disabled icon"> <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318248/at-stake/layout/score.svg"/><span>score</span></div>
             </section>
 
             {{!-- ROLE CARD OVERLAY --}}
@@ -115,11 +115,9 @@
 
             {{#ifnoteq section 'homepage'}}
 
+            <img id="background-logo" style="display:none" src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318386/at-stake/layout/logo-bg.svg">
+            
                 <div class="col-sm-12 col-lg-12" id="gameContent">
-
-                    {{!-- <section id="logo-bar" style="display:none">
-                        <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
-                    </section> --}}
 
                     {{> shared/resuming }}
 
