Resolved issue where decider could sometimes be flagged as active player, resolved issue where game would move past pitch phase after only one player finished pitching, resolved issues where decider could not advance phase at end of all pitching (likely resolution for 76/78), resolved issue where decider did not see “(playername) is deciding...." modal and did not close for others, resolved issue where inner modals would be opened when preceding screen was refreshed. Other modal open/close fixes.

--- a/templates/partials/component/choice.hbs
+++ b/templates/partials/component/choice.hbs
@@ -5,6 +5,7 @@
 
 --}}
 
+{{!-- Decide phase --}}
 {{#ifeq pitches true}}
 
 	{{#ifeq decider true}} 
@@ -48,7 +49,10 @@
 
   <span id="modifier" class="hidden-el" data-inner_modal="true"></span>
 
+{{!-- Pitch phase --}}
 {{else}}
+
+{{{jsonPrint active_player}}}
 
 	{{#ifeq active_player true}}
 
