--- a/templates/partials/shared/pitch.hbs
+++ b/templates/partials/shared/pitch.hbs
@@ -149,6 +149,7 @@
 		{{!-- choice box for buying more time --}}
 		{{> component/choice 
 				active_player=player.isActive
+				all_players=true
 		}}
 
 	</div>
