--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -69,13 +69,12 @@
                 <span id="fill" class="phase-path"></span>
                 <span id="progress" class="phase-path"></span>
 
-                <div class="disabled icon"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/meet.svg"/><span>meet</span></div>
-                <div class="disabled icon"><img src="http://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/brainstorm.svg"/><span>brainstorm</span></div>
-                <div class="disabled icon"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/pitch.svg"/><span>pitch</span></div>
-                <div class="disabled icon"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/deliberate.svg"/><span>deliberate</span></div>
-                {{!-- <div class="disabled icon"><img src="/images/layout/stageicons/grandstand.svg"/><span>grandstand</span></div> --}}
-                <div class="disabled icon"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318245/at-stake/layout/decide.svg"/><span>decide</span></div>
-               <div class="disabled icon"> <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1491318248/at-stake/layout/score.svg"/><span>score</span></div>
+                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/meet.svg' width=34}}}<span>meet</span></div>
+                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/brainstorm.svg' width=34}}}<span>brainstorm</span></div>
+                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/pitch.svg' width=34}}}<span>pitch</span></div>
+                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/deliberate.svg' width=34}}}<span>deliberate</span></div>
+                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/decide.svg' width=34}}}<span>decide</span></div>
+                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/score.svg' width=34}}}<span>score</span></div>
             </section>
 
             {{!-- ROLE CARD OVERLAY --}}
