add new rules screens, update timer, update button styling

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -314,7 +314,7 @@
 	                    strokeWidth: 6,
 	                    trailColor: 'rbga(235, 235, 235, 0.5)',
 	                    trailWidth: 0.8,
-	                    fill: '#20b5e6',
+	                    fill: '#ff3d6b',
 	                    text: {
 	                        value: $(timerPreview[0]).data('duration')
 	                    }
