--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -75,7 +75,7 @@ var startTimer = function(secondsLeft) {
           strokeWidth: 6,
           trailColor: 'rbga(235, 235, 235, 0.5)',
           trailWidth: 0.8,
-          fill: '#20b5e6',
+          fill: '#ff3d6b',
           // Set default step function for all animate calls
           step: function(state, circle) {
             circle.setText(secondsLeft);
@@ -343,9 +343,9 @@ socketEvents = function(eventId, eventData) {
             break;
 
         case 'game:start':
-            if (!$('.rules-screen'))
+            if (!$('.rules-screen').css('display', 'block'))
                 $('#background-logo').show();
-                
+
             $('#bottom-bar').show();
             
             $('#agenda-items .role:visible').remove();
@@ -379,7 +379,7 @@ socketEvents = function(eventId, eventData) {
 
         case 'game:next_phase':
 
-            if (!$('.rules-screen'))
+            if (!$('.rules-screen').css('display', 'block'))
                 $('#background-logo').show();
 
             $('#bottom-bar').show();
