Fix for some of issue 66 (coin amount inaccurate), modal fixes for when player re-connects, styling fixes.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -94,8 +94,9 @@
 
 	&:hover, &:focus, &:visited {
 		@include box-shadow(0px, 7px, 0px, darken($background-color, 10%));
-		margin-bottom: 7px;
+		// margin-bottom: 7px;
 		cursor: pointer;
+		color: white;
 	}
 
 	color: white;
@@ -117,10 +118,16 @@
   text-align: center;
 
 	width: 80%;
-	// background-position: 10px 10px;
 
-		// background-position: 29px 5px !important;
-		// background-size: 48px 48px !important;
+	&#btn_yes {
+		background-color: $blue-light;
+		// border-bottom: 4px solid $dark-sky-blue;
+	}
+	&#btn_no {
+		background-color: $sunflower;
+		// border-bottom: 4px solid $tangerine;
+	}
+
 }
 
 .header {
@@ -268,6 +275,13 @@ input.post-button {
 		z-index: 1;
 		text-align:center;
 
+		img {
+			display: block;
+	    margin: auto;
+			width: 34px;
+			height: 34px;
+		}
+
 		&:nth-child(1) {
 			margin-left: 10px;
 		}
@@ -283,13 +297,8 @@ input.post-button {
 	    font-family: 'AvenirNext-Bold';
 		}
 
-		img {
-			display: block;
-	    margin: auto;
-	    height: 100%;
-		}
-
 		&.disabled {
+			@include scale(.7);
 			@include filter(grayscale, 100%);
 			animation-name: exit-stage;
 			animation-duration: 1s;
@@ -375,6 +384,10 @@ input.post-button {
 				padding-left: 4%;
 				font-size: 16px;
 			}
+		}
+		#btn-empty {
+			background-color: darken($blue-light, 30%);
+			@include box-shadow(0px, 7px, 0px, darken($background-color, 10%));
 		}
 		#btn-cancel {
 			background-color: $sunflower;
