--- a/public/styles/_core/media.scss
+++ b/public/styles/_core/media.scss
@@ -8,16 +8,94 @@
 	
 }
 
-@media (max-width: 320px) {
+@media (max-width: 321px) {
 
+	body #gameContent.isMobile {
+		padding-top: 30px;
+	}
+
+	body #lobby #name.lobby .login-footer {
+		padding: 20px 35px;
+	}
+
+	body #lobby #name.lobby .form {
+		top: 0px;
+	}
+
+
+	body #lobby #name.lobby #description p {
+
+		width: 100%;
+	}
+	
 	.glide__slide {
 		min-width: 274px !important;
 	}
 
-	.player-grid{
+	body .player-grid{
 		min-height: 45%;
 	}
+
+	body blockquote.speech {
+
+		padding: 60px 20px;
+		
+		button {
+			bottom: 90px;
+		}
+
+		p {
+			line-height: 1.1
+		}
+
+	}
+
 	
+}
+
+// For teeny tiny screen heights (iPod)
+@media(max-height: 460px) {
+
+	// Fix the login!
+	.player-grid {
+		max-height: 50%;
+		min-height: 40%;
+	}
+
+	// Fix that quote!
+	blockquote.speech {
+		padding: 40px 20px;
+		height:237px;
+		h3 {
+			line-height: 1.3;
+			margin: 5px;
+		}
+
+		button {
+			bottom: 60px;
+			&:before {
+				bottom: 6px;
+		    left: 60px;
+			}
+
+			&.timer {
+				bottom: 70px;
+				&:before {
+					bottom: 5px;
+					left: 123px;
+				}
+			}
+		}
+	}
+
+	// Fix those buttons!
+	.decider {
+		button {
+			position: absolute;
+			z-index: 4000;
+			left: 20%;
+		}
+	}
 }
 
 @media (max-width: 375px) and (min-width: 321px) {
