--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -25,8 +25,8 @@
     <div class="game-pitch col-md-7 col-xs-12">
       <div class="half-1 col-sm-12 col-centered">
         <h4 class="tagline">{{{content.tagline.html}}}</h4>
-        <div class="cta-para-one">{{{content.ctaParagraphOne.html}}}</div>
-        <div class="cta-para-two">{{{content.ctaParagraphTwo.html}}}</div>
+        <div class="text-block cta-para-one">{{{content.ctaParagraphOne.html}}}</div>
+        <div class="text-block cta-para-two">{{{content.ctaParagraphTwo.html}}}</div>
         </div>
         <ul class="cta-points">
           <li><strong><div class="point-content">{{{content.pointOneText.html}}}</div></strong></li>
@@ -42,17 +42,17 @@
       <div class="feature-one col-sm-4">
       	<div class="feature-image feature-one-image"><img src="{{{cloudinaryUrl content.featureOneIcon width=auto height=100 crop='scale' quality=100}}}"></div>
         <div class="feature-header-one"><h3>{{{content.featureOneTitle.html}}}</h3></div>
-      	<div class="feature-text feature-one-text">{{{content.featureOneParagraph.html}}}</div>
+      	<div class="text-block feature-text feature-one-text">{{{content.featureOneParagraph.html}}}</div>
       </div>
       <div class="feature-two col-sm-4">
       	<div class="feature-image feature-two-image"><img src="{{{cloudinaryUrl content.featureTwoIcon width=auto height=100 crop='scale' quality=100}}}"></div>
         <div class="feature-header-two"><h3>{{{content.featureTwoTitle.html}}}</h3></div>
-      	<div class="feature-text feature-two-text">{{{content.featureTwoParagraph.html}}}</div>
+      	<div class="text-block feature-text feature-two-text">{{{content.featureTwoParagraph.html}}}</div>
       </div>
       <div class="feature-three col-sm-4">
         <div class="feature-image feature-three-image"><img src="{{{cloudinaryUrl content.featureThreeIcon width=auto height=100 crop='scale' quality=100}}}"></div>
         <div class="feature-header-three"><h3>{{{content.featureThreeTitle.html}}}</h3></div>  
-      	<div class="feature-text feature-three-text">{{{content.featureThreeParagraph.html}}}</div>
+      	<div class="text-block feature-text feature-three-text">{{{content.featureThreeParagraph.html}}}</div>
       </div>
     </div>
   </div>
@@ -61,7 +61,7 @@
   <div class="row flow-play col-lg-10 col-sm-10 col-centered">
     <div class="game-flow">
       <h3 class="flow-play-header">{{{content.flowOfGameHeader.html}}}</h3>
-    	<div class="flow-play-para">{{{content.flowOfGameParagraph.html}}}</div>
+    	<div class="text-block flow-play-para">{{{content.flowOfGameParagraph.html}}}</div>
     	<div class="flow-play-pic"><img class="play-pic col-centered" src="{{{cloudinaryUrl content.flowOfGamePicture width=auto height=350 crop='scale' quality=100}}}"></div>
     </div>
     <img class="game-flow-graphic left" src="http://res.cloudinary.com/engagement-lab-home/image/upload/v1488559363/at-stake-site/trophyCrop.png">
@@ -72,13 +72,13 @@
   <div class="row learn-more col-lg-8 col-sm-10 col-centered">
     <div class="game-learn">
     	<h3 class="learn-more-header">{{{content.learnMoreHeader.html}}}</h3>
-    	<div class="learn-more-para">{{{content.learnMoreParagraph.html}}}</div>
+    	<div class="text-block learn-more-para">{{{content.learnMoreParagraph.html}}}</div>
     </div>
   </div>
 
   {{!-- CREDITS --}}
   <div class="credits row col-lg-12 col-centered">
-    <div class="design-dev-team">
+    <div class="text-block design-dev-team">
       <h3>Design and Development Team</h3>
         <div class="people">
           <div class="team row pi"><h5 class="team-title">Principal Investigator </h5>{{content.principalInvestigator.name}}</div>
