Added ‘delta’ key to player coins object, added title of ‘Decider’ for role when player is decider, added sorting indices by current coin ranking for scoreboard final view, scoreboard implementation and layout, added ordinalPosition and numSign HBS helpers, fix so screen advances at end of brainstorm timer, scoreboard animations.

--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -38,7 +38,8 @@ $color-pink: #ff115a;
 $pink-dark: #e90048;
 $pink-light: #ff3d6b;
 
-// Grey
+// Grey/White
+$grey-white: #d8d8d8;
 $color-grey: #555555;
 $grey-dark: #949494;
 $color-white: #ebebeb; 
