--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -523,10 +523,8 @@ socketEvents = function(eventId, eventData) {
                 
             });
 
-            if(eventData == "brainstormCountdown" || eventData == "deliberateCountdown") {
-                // if(isDecider)
-                    nextPhaseScreen();
-            }
+            if(eventData == "brainstormCountdown" || eventData == "deliberateCountdown")
+                nextPhaseScreen();
 
             break;
 
@@ -555,7 +553,7 @@ socketEvents = function(eventId, eventData) {
                 $('#btn-next-player').fadeIn();
 
                 if(isDecider)
-                    $('#btn-next').show();
+                    socket.emit((eventData.end ? 'game:next_screen' : 'game:next_player'), emitData());
             });
 
             break;
