Added basic version of double-down phase. Also resolved issue where buying time was disabled only if player was out of coins, but not if player had coins but not enough to purchase.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -444,7 +444,7 @@ input.post-button {
 	.coins {
     position: relative;
 		float: left;   
-		margin-top: 10%;
+		// margin-top: 10%;
 		font-size: 16px;
 	}
 	
