--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -74,6 +74,7 @@
                 <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/brainstorm.svg' width=23 height=23}}}<span>brainstorm</span></div>
                 <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/pitch.svg' width=23 height=23}}}<span>pitch</span></div>
                 <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/deliberate.svg' width=23 height=23}}}<span>deliberate</span></div>
+                <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/grandstand.svg' width=23 height=23}}}<span>double-down</span></div>
                 <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/decide.svg' width=23 height=23}}}<span>decide</span></div>
                 <div class="disabled icon">{{{cloudinaryUrl 'v1491318245/at-stake/layout/score.svg' width=23 height=23}}}<span>score</span></div>
             </section>
