--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -539,22 +539,30 @@ input.post-button {
   margin: 8px;
   margin-bottom: 0px;
   background: $color-red;
-  border-radius: 0px;
+  border-radius: 10px;
   border: 3px white solid;
   border-bottom: 0px;
   z-index: 3000;
-  @include gradient-vertical($orange-dark, $white, 30%, 30%);
+  @include gradient-vertical(#18b898, $white, 20%, 20%);
   top:0px;
 
   .swipe {
-  	margin-bottom: 20px;
+  	margin: 8px;
   }
   .instruction {
-  	font-size:12px;
-  	font-family: $avenir-reg;
+  	font-family: AvenirNext;
+	  font-size: 12px;
+	  span {
+	  	font-family: AvenirNext-Bold;
+	  }
   }
   .icon {
-  	margin: 20px;
+  	margin: 20px auto;
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    border: 4px white solid;
+    background:#00f0cc;
   }
 
   .role-info {
@@ -563,22 +571,49 @@ input.post-button {
   	padding-bottom: 20px;
 
   	.title {
-  		font-size: 18px;
+  		font-family: AvenirNext-Bold;
+		  font-size: 24px;
+		  font-weight: 900;
+		  text-align: center;
+		  color: #18b898;
   	}
   	
   	p {
-  		text-align: left;
-  		color:$orange-dark;
+  		color:#555555;
+  		font-family: AvenirNext;
+		  font-size: 16px;
+		  font-weight: 500;
   		display:inline;
   	}
   }
+  .line {
+  	margin: 0px auto;
+  	width: 176px;
+	  height: 2px;
+	  background-color: #59f6de;
+	  margin: 16px auto;
+  }
   .agenda-wrap {
   	color: $orange-dark;
+
+  	.header {
+  		font-family: AvenirNext-Bold;
+  		color: #18b898;
+  	}
+
+  	.instruction {
+			color:#555555;
+  		font-family: AvenirNext;
+		  font-size: 16px;
+		  font-weight: 500;
+  		display:inline;
+  	}
   }
   .agenda-item {
   	border-radius: 100px;
-  	background-color: $orange-light;
-  	margin: 10px;
+  	background-color: $orange-dark;
+  	margin: 16px;
+  	margin-top: 24px;
   	color: white;
 
   	.value {
@@ -591,11 +626,12 @@ input.post-button {
 	    background-position: 3px 3px;
 	  	// background-size: cover;
 	  	background-repeat: no-repeat;
-	  	background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/v1486743650/at-stake/coin_stroke.png");
+	  	background-image: url("https://res.cloudinary.com/engagement-lab-home/image/upload/v1490979430/at-stake/layout/icon-yourcoins.svg");
 	  }
 	  .agenda {
 	  	height: 60px;
 	  	line-height:60px;
+	  	width: 208px;
 	  	display:inline-block;
 	  }
   }
@@ -613,7 +649,7 @@ input.post-button {
 .rules-screen {
 	min-height: 400px;
 	.main-rule {
-		font-family: AvenirNext;
+		font-family: AvenirNext-Bold;
 	  font-size: 16px;
 	  font-weight: bold;
 	  line-height: 1;
