Added heavy font, resolved issue where pitch phase did not advance to last screen for decider.

--- a/public/styles/_core/fonts.scss
+++ b/public/styles/_core/fonts.scss
@@ -30,6 +30,7 @@
 @include font-face(AvenirNext-DemiBold, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNext-DemiBold', null, null, woff2 woff eot ttf);
 @include font-face(AvenirNext-UltraLight, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNextCondensed-UltraLight', null, null, woff2 woff eot ttf);
 @include font-face(AvenirNext-Medium, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNext-Medium', null, null, woff2 woff eot ttf);
+@include font-face(AvenirNext-Heavy, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNext-Heavy', null, null, woff2 woff eot ttf);
 
 @include font-face(Aileron, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/Aileron-Regular', null, null, otf);
 
@@ -40,6 +41,7 @@ $sub-header-type: "AvenirNext-DemiBold", sans-serif;
 $at-sign-type: "AvenirNext-UltraLight", sans-serif;
 
 $avenir-reg: "AvenirNext", sans-serif;
+$avenir-heavy: "AvenirNext-Heavy", sans-serif;
 
 $aileron: "Aileron", sans-serif;
 
