--- a/templates/partials/shared/rolecard.hbs
+++ b/templates/partials/shared/rolecard.hbs
@@ -10,7 +10,7 @@
 	{{!-- <img class="icon" src="{{{cloudinaryUrl icon height=100 width=100}}}"/> --}}
 
 	<h2 class="title">{{title}}</h2>
-	<div class="description">"{{{bio.html}}}"</div>
+	<div class="description">{{{bio.html}}}</div>
 
 </div>
 	<div class="line"></div>
